--- a/fomulario/painel/css/main.css
+++ b/fomulario/painel/css/main.css
@@ -132,21 +132,23 @@ header{
     position: fixed;
     width: 100%;
     height: 100px;
-    background-color: #00A651;
+    background-color: #20ce88;
     z-index: 3000;
 }
 header .center{
+    /* width: 100%; */
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 0;
+    padding: 0 2%;
 }
 .animate-header .logo{
     animation: left 1s;
 }
 header .logo a img{
-    width: 150px;
-    height: 90px;
+    width: 110px;
+    /* height: 90px; */
 }
 
 .user{
@@ -183,7 +185,7 @@ header .logo a img{
     transition: .5s linear;
 }
 .border-usuario-active{
-    border: 2px solid #00A651;
+    border: 2px solid #20ce88;
     transition: .5s linear;
     box-shadow: 0 0 10px 2px rgb(80, 80, 80);
 }
