--- a/fomulario/painel/css/relatorio.css
+++ b/fomulario/painel/css/relatorio.css
@@ -330,20 +330,26 @@
 }
 .opcoes-relatorio-filter .btn-filter-tabela{
     width: auto;
-    cursor: pointer;
-    padding: 0 10px;
     height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    cursor: pointer;
     margin: 0 5px;
     border-radius: 8px;
     text-transform: uppercase;
-    color: #f5f5f5;
-    font-weight: normal;
     filter: drop-shadow(0 2px 3px #444);
     background-color: #4158d0;
     transition: background-color .5s;
+}
+.opcoes-relatorio-filter .btn-filter-tabela a{
+    color: #f5f5f5;
+    font-weight: normal;
+    text-decoration: none;
+    padding: 0 10px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .5s;
+    
 }
 .opcoes-relatorio-filter .btn-filter-tabela i{
     width: 20px;
@@ -352,8 +358,10 @@
     transform: rotate(-90deg);
     margin-right: 10px;
     display: none;
+    transition: .5s;
 }
 .opcoes-relatorio-filter .btn-filter-tabela.select i{
+    transition: .5s;
     display: block;
 }
 
