--- a/fomulario/painel/css/relatorio.css
+++ b/fomulario/painel/css/relatorio.css
@@ -326,6 +326,10 @@
 /* BTN FILTER TABELA */
 .opcoes-relatorio-filter{
     display: flex;
+    /* padding: 0 2%; */
+}
+.opcoes-relatorio-filter form{
+    display: flex;
     padding: 0 2%;
 }
 .opcoes-relatorio-filter .btn-filter-tabela{
@@ -333,25 +337,31 @@
     height: 40px;
     cursor: pointer;
     margin: 0 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: normal;
     border-radius: 8px;
-    text-transform: uppercase;
     filter: drop-shadow(0 2px 3px #444);
     background-color: #4158d0;
     transition: background-color .5s;
 }
-.opcoes-relatorio-filter .btn-filter-tabela a{
-    color: #f5f5f5;
-    font-weight: normal;
-    text-decoration: none;
+.opcoes-relatorio-filter .btn-filter-tabela input[type=submit]{
     padding: 0 10px;
+    color: #f5f5f5;
+    background-color: transparent;
+    font-size: 16px;
+    border: 0;
+    outline: none;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: .5s;
-    
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.opcoes-relatorio-filter .btn-filter-tabela.select{
+    padding: 0 10px 0 0;
 }
 .opcoes-relatorio-filter .btn-filter-tabela i{
+    margin: 0 0 0 10px;
     width: 20px;
     height: 20px;
     fill: #fff;
@@ -362,6 +372,7 @@
 }
 .opcoes-relatorio-filter .btn-filter-tabela.select i{
     transition: .5s;
+    margin: 0 0 0 10px;
     display: block;
 }
 
